# nu-agent

./: .gitignore  Cargo.toml  Makefile  PLAN.md  PLAN.md.bak_jsonl  README.md  RULES.md  api.nu  check-env.nu  config.nu  config.toml  engine.nu  kuzu_plan.nu  kuzu_run.nu  llm.nu  math.nu  mod.nu  mod.nu.bak_jsonl  nu-agent  nu-ingest  nu-ingest.nu  nu-ingest.nu.bak_jsonl  nu-shredder  rig_plan.nu  rig_run.nu  seed-template.nu  test-enrich.nu  test-ingest.nu  test-ingest.nu.bak_jsonl  test-malformed.nu  test-schema.nu  test-seed-template.nu  tool-registry.nu  tools.nu
.github/workflows/: rust-ci.yml
agent/: consultant.nu  enrichment.nu  json.nu  llm.nu  operator.nu  runtime.nu  schema.nu
archive/: external_nushell_repo_backup.README  removed_paths.txt
archive/nu_ingest_rebuild_backup/: 00_basic_types.chunks.msgpack  00_basic_types.embedding_input.msgpack  00_filters_overview.chunks.msgpack  00_filters_overview.embedding_input.msgpack  00_flow_control_overview.chunks.msgpack  00_flow_control_overview.embedding_input.msgpack  00_not_assignable.chunks.msgpack  00_not_assignable.embedding_input.msgpack  00_types_overview.chunks.msgpack  00_types_overview.embedding_input.msgpack  01_not_declarable.chunks.msgpack  01_not_declarable.embedding_input.msgpack  2019-08-23-introducing-nushell.chunks.msgpack  2019-08-23-introducing-nushell.embedding_input.msgpack  2019-08-30-twin0001.chunks.msgpack  2019-08-30-twin0001.embedding_input.msgpack  2019-09-06-twin0002.chunks.msgpack  2019-09-06-twin0002.embedding_input.msgpack  2019-09-13-twin0003.chunks.msgpack  2019-09-13-twin0003.embedding_input.msgpack  2019-09-20-twin0004.chunks.msgpack  2019-09-20-twin0004.embedding_input.msgpack  2019-09-24-nushell_0_3_0.chunks.msgpack  2019-09-24-nushell_0_3_0.embedding_input.msgpack  2019-09-27-twin0005.chunks.msgpack  2019-09-27-twin0005.embedding_input.msgpack  2019-10-04-twin0006.chunks.msgpack  2019-10-04-twin0006.embedding_input.msgpack  2019-10-11-twin0007.chunks.msgpack  2019-10-11-twin0007.embedding_input.msgpack  2019-10-15-nushell-0_4_0.chunks.msgpack  2019-10-15-nushell-0_4_0.embedding_input.msgpack  2019-10-18-twin0008.chunks.msgpack  2019-10-18-twin0008.embedding_input.msgpack  2019-10-25-twin0009.chunks.msgpack  2019-10-25-twin0009.embedding_input.msgpack  2019-11-01-twin0010.chunks.msgpack  2019-11-01-twin0010.embedding_input.msgpack  2019-11-05-nushell-0_5_0.chunks.msgpack  2019-11-05-nushell-0_5_0.embedding_input.msgpack  (+2433 more)
contracts/: architect.toml  developer.toml
crates/nu_agent_common/: Cargo.toml
crates/nu_agent_common/src/: lib.rs
crates/nu_fuzzy_match/: Cargo.toml
crates/nu_fuzzy_match/src/: main.rs
crates/nu_plugin_rag/: Cargo.toml  README.md
crates/nu_plugin_rag/data/: prepare_catalog.json
crates/nu_plugin_rag/src/: lib.rs  main.rs  state.rs
crates/nu_plugin_rag/src/commands/: embed.rs  index.rs  mod.rs  shred.rs  similarity.rs
data/: nu_docs_vectors.nuon
docs/: ARCHITECTURAL_MANIFEST.md  ARCHITECTURAL_MANIFEST.md.bak_jsonl  ARCHITECTURE.md  ARCHITECTURE.md.bak_jsonl  AUDIT.md  CONTRACTS.md  CONTRACT_PROMPTS.md  DEVELOPER.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT.md.bak_jsonl  NU_AGENT_SYSTEM_PROMPT.txt  NU_AGENT_SYSTEM_PROMPT.txt.bak_jsonl  PROJECT_CONTRACTS.md  PROJECT_CONTRACTS.md.bak_jsonl  RAG.md  RAG.md.bak_jsonl  STATUS.md  VISION.md
examples/: embedding_input_example.jsonl  merge_reconcile.nu
scripts/: _aggregate_chunks.nu  aggregate-nuon.nu  build_body.nu  convert_jsonl_to_msgpack.py  convert_jsonl_to_msgpack.py.bak_jsonl  embed-and-stream.nu  embed-stream.nu  hydrate-hits.nu  hydrate.nu  ingest-docs.nu  ingest-docs.nu.bak_jsonl  jsonl-to-nuon.nu  jsonl_to_nuon.py  jsonl_to_nuon.py.bak_jsonl  kuzu-import.nu  make-data-from-chunks.nu  make-data-from-chunks.nu.bak_jsonl  make_record.nu  mass-ingest.nu  mock_embedding_server.py  nu_embedder.nu  prep-nu-rag.nu  rag-search.nu  rag.shim.nu  resolve-command-doc.nu  run_airun.nu  search-nu-concepts.nu  smoke-call-llm.nu  smoke-consultant.nu  smoke-enrich.nu  smoke-operator.nu  smoke-test.nu  smoke-tokenize-and-dryrun.nu  test-edifice.nu  test-integrity.nu  test-pipeline.nu
shredder/: Cargo.toml
shredder/src/: main.rs  parser.rs  types.rs
tmp/: input.nuon  out.json  out.msgpack  vec.msgpack
tools/: hydrate_hits.rs
tools/agent_bridge/: Cargo.toml
tools/agent_bridge/src/: main.rs
tools/aggregate_chunks/: Cargo.toml
tools/aggregate_chunks/src/: main.rs
tools/flat_index/: Cargo.toml
tools/flat_index/src/: lookup.rs  main.rs
tools/inspect_chunks/: Cargo.toml
tools/inspect_chunks/src/: main.rs
tools/make_golden/: Cargo.toml
tools/make_golden/src/: main.rs
tools/nu_embedder/: Cargo.toml
tools/nu_embedder/src/: main.rs
