[workspace]
members = [
    "crates/nu_plugin_rag",
    "crates/nu_fuzzy_match",
    "crates/nu_agent_common",
    "shredder",
    "tools/nu_embedder",
    "tools/inspect_chunks",
    "tools/make_golden",
    "tools/flat_index",
    "tools/agent_bridge",
]

# Use Cargo resolver v2 for consistent dependency resolution across 2021-edition members
resolver = "2"
