[package]
name = "nu_plugin_rag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
which = "4"
dirs = "5"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
tokenizers = "0.14"
ndarray = "0.15"
chrono = { version = "0.4", features = ["serde"] }
nu_agent_common = { path = "../nu_agent_common" }

# Fastembed + SurrealDB for local embeddings + persistence
fastembed = "4.9"
# use the 3.x surrealdb crate series from crates.io
# Don't enable the RocksDB feature here so builds don't require system libclang/bindgen.
# For persistence with RocksDB enable the "kv-rocksdb" feature in environments that provide
# libclang (or set LIBCLANG_PATH). For local dev and CI we prefer the default/in-memory engine.
surrealdb = { version = "3.0.5" }
# arrow pulled in previously; not required by embed_runner directly and causes
# a transitive build failure in this environment (chrono/arrow-arith ambiguity).
# Remove to simplify local dev; add back in environments that need Arrow.
lancedb = { version = "0.10", optional = true }


[lib]
name = "nu_plugin_rag"
path = "src/lib.rs"

[[bin]]
name = "embed_runner"
path = "src/bin/embed_runner.rs"

[[bin]]
name = "nu-search"
path = "src/bin/nu-search.rs"
