[package]
name = "nu_plugin_rag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
which = "4"
dirs = "5"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
nu_agent_common = { path = "../nu_agent_common" }

# Fastembed + SurrealDB for local embeddings + persistence
# Align with tools/nu_embedder which uses fastembed = "5"
fastembed = "5"
# Persistence/DB crates removed: we persist MessagePack files as the canonical store.

# Utilities used by nu-search
rayon = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4"] }


[lib]
name = "nu_plugin_rag"
path = "src/lib.rs"

[[bin]]
name = "embed_runner"
path = "src/bin/embed_runner.rs"

[[bin]]
name = "nu-search"
path = "src/bin/nu-search.rs"
