[package]
name = "nu_plugin_rag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rayon = "1"
blake3 = "1"
pulldown-cmark = "0.9"
text-splitter = { version = "0.13", features = ["tokenizers"] }
tokenizers = { version = "0.19", features = ["http"] }
