[package]
name = "flat_index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rmp-serde = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# rmpv removed: not used directly (we use rmp-serde)
rayon = { version = "1.9", optional = false }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }

[features]
default = []
