[package]
name = "nu_embedder"
version = "0.1.0"
edition = "2021"

# Local fastembed support removed; embeddings are produced via remote embedding service by default
[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
# rmpv removed: not used directly (we use rmp-serde)
